--- a/templates/app/family.html
+++ b/templates/app/family.html
@@ -130,8 +130,8 @@
   }
 </style>
 <div class="wrapper">
-  <form class="form" method="POST" action="{% url 'app:familyForm' %}">
-    {% csrf_token %}
+  <form class="form" method="POST" action="{% url 'app:familyForm'  %}">
+    <!-- {% csrf_token %} -->
     <br>
     <h2>Report A Missing Persion</h2>
     <h4>Family Details</h4>
