--- a/templates/app/age_progress.html
+++ b/templates/app/age_progress.html
@@ -41,6 +41,14 @@
       <img src="{{cycle_path}}"  alt="Forest" height="300" width="300" >
       <h3>(Cycle Gan O/P)</h3>
     </div>
+
+    <div class="column">
+      <h3>Age Progressed Image</h3>
+      <img src="{{sam_path}}"  alt="Forest" height="300" width="1200" >
+    <h3>(SAM O/P)</h3>
+  </div>
+  
+
 </div>
 
 {% endblock %}
